--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router": "^2.0.1",
     "react-router-dom": "^4.2.2",
     "redux": "^3.0.4",
+    "redux-form": "^7.2.0",
     "redux-logger": "^3.0.6"
   }
 }
