--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.0.4",
     "redux-form": "^7.2.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   }
 }
